<resources>
    <string name="app_name">BatikKita</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_scan">Scan</string>
    <string name="title_gift">Gift</string>
    <string name="title_Map">Map</string>
    <string name="title_e_commerce">E-Commerce</string>
    <string name="title_fragment_home">WELCOME TO BATIK KITA!</string>
    <string name="example_batik">BATIK 1</string>
    <string name="example_location">JOGJAKARTA</string>

    <string name="today_quiz">Today Quiz</string>
    <string name="your_point">Your Point</string>
    <string name="voucher">Voucher</string>
    <string name="surprise_me">Surprise me!</string>
    <string name="title_notification">How many Batik motifs do you know?</string>
    <string name="description_notification">Until now, there are more than 5,000 batik motifs throughout Indonesia.</string>
    <string name="predict_result">Predict result</string>
    <string name="scan_again">SCAN AGAIN</string>
    <string name="permission_deny_text">Required permission denied. Existing.</string>
    <string name="scan_your_batik_here">SCAN YOUR BATIK HERE!</string>
    <string name="predict">PREDICT</string>
    <string name="batik">Batik</string>
    <string name="action_back">Image Action Back</string>

    <string name="title_map_fragment">Indonesia\'s Batik Map</string>
    <string name="notification">Notification</string>

    <string name="success_favorite">Successfully add %s to your favorite</string>
    <string name="success_unfavorite">Successfully unfavorite %s</string>
    <string name="favorite">Favorite</string>
    <string name="island_name">Island Name</string>
    <string name="batik_from_this_island">Batik from this island</string>
    <string name="batik_dari_pulau_lain">Batik from other island</string>
    <string name="camera_not_ready">Camera is not ready!</string>

    <string name="province">Province : </string>
    <string name="theme">Theme : </string>
    <string name="color">Color : </string>
    <string name="complexity">Complexity : </string>
    <string name="description">Description</string>
    <string name="pattern">Pattern</string>
    <string name="title_cart_detail">Batik E-Commerce</string>
    <string name="packing_from_location">Packing from %s</string>
    <string name="text_description">Batik 1 is from Jogjakarta.........................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................You can get this Batik here</string>
    <string name="review_product">Review Product</string>
    <string name="buy">BUY</string>
    <string name="find_based_on">Find based on :</string>
    <string name="set">Set</string>
    <string name="human">human</string>
    <string name="geometric">geometric</string>
    <string name="monument">monument</string>
    <string name="fauna">fauna</string>
    <string name="flora">flora</string>
    <string name="cloud">cloud</string>
    <string name="calligraphy">calligraphy</string>
    <string name="red">red</string>
    <string name="black">black</string>
    <string name="orange">orange</string>
    <string name="dark_blue">dark blue</string>
    <string name="brown">brown</string>
    <string name="yellow">yellow</string>
    <string name="blue">blue</string>
    <string name="white">white</string>
    <string name="green">green</string>
    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="high">high</string>
    <string name="search">SEARCH</string>

    <string-array name="list_filter">
        <item>Theme</item>
        <item>Color</item>
        <item>Complexity</item>
    </string-array>

</resources>