<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/batik_accentfix"
    tools:context=".ui.search.SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_search"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:src="@drawable/ic_back" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:src="@drawable/logo_app"
            android:layout_gravity="center"/>


        <ImageView
            android:id="@+id/iv_favoriteList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_favorite_border_24" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_set"
        app:layout_constraintEnd_toStartOf="@+id/btn_set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_set" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/find_based_on"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_search" />

    <Button
        android:id="@+id/btn_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <!--theme-->

    <CheckBox
        android:id="@+id/cb_human"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/human"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set" />

    <CheckBox
        android:id="@+id/cb_geometric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/geometric"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_human" />

    <CheckBox
        android:id="@+id/cb_monument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/monument"
        app:layout_constraintStart_toEndOf="@+id/cb_fauna"
        app:layout_constraintTop_toBottomOf="@+id/btn_set" />

    <CheckBox
        android:id="@+id/cb_fauna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/fauna"
        app:layout_constraintStart_toEndOf="@+id/cb_geometric"
        app:layout_constraintTop_toBottomOf="@+id/btn_set" />

    <CheckBox
        android:id="@+id/cb_flora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/flora"
        app:layout_constraintStart_toEndOf="@+id/cb_geometric"
        app:layout_constraintTop_toBottomOf="@+id/cb_fauna" />

    <CheckBox
        android:id="@+id/cb_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/cloud"
        app:layout_constraintStart_toEndOf="@+id/cb_fauna"
        app:layout_constraintTop_toBottomOf="@+id/cb_monument" />

    <CheckBox
        android:id="@+id/cb_calligraphy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calligraphy"
        app:layout_constraintStart_toStartOf="@+id/cb_geometric"
        app:layout_constraintTop_toBottomOf="@+id/cb_geometric" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="cb_calligraphy, cb_cloud, cb_fauna, cb_flora, cb_geometric, cb_geometric, cb_human, cb_monument"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="335dp" />

    <!--color-->

    <CheckBox
        android:id="@+id/cb_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set" />

    <CheckBox
        android:id="@+id/cb_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_red" />

    <CheckBox
        android:id="@+id/cb_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/orange"
        app:layout_constraintStart_toStartOf="@+id/cb_black"
        app:layout_constraintTop_toBottomOf="@+id/cb_black" />

    <CheckBox
        android:id="@+id/cb_dark_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/dark_blue"
        app:layout_constraintStart_toEndOf="@+id/cb_orange"
        app:layout_constraintTop_toBottomOf="@+id/btn_set" />

    <CheckBox
        android:id="@+id/cb_brown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/brown"
        app:layout_constraintStart_toEndOf="@+id/cb_orange"
        app:layout_constraintTop_toBottomOf="@+id/cb_dark_blue" />

    <CheckBox
        android:id="@+id/cb_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/yellow"
        app:layout_constraintStart_toEndOf="@+id/cb_orange"
        app:layout_constraintTop_toBottomOf="@+id/cb_brown" />

    <CheckBox
        android:id="@+id/cb_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/blue"
        app:layout_constraintStart_toEndOf="@+id/cb_dark_blue"
        app:layout_constraintTop_toBottomOf="@+id/btn_set" />

    <CheckBox
        android:id="@+id/cb_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/white"
        app:layout_constraintStart_toEndOf="@+id/cb_dark_blue"
        app:layout_constraintTop_toBottomOf="@+id/cb_blue" />

    <CheckBox
        android:id="@+id/cb_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/green"
        app:layout_constraintStart_toEndOf="@+id/cb_dark_blue"
        app:layout_constraintTop_toBottomOf="@+id/cb_white" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="cb_black,cb_blue,cb_brown,cb_dark_blue,cb_green,cb_orange,cb_red,cb_red,cb_white,cb_yellow"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="335dp" />

    <!--complexity-->

    <RadioGroup
        android:id="@+id/rbg_complexity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/btn_set">

        <RadioButton
            android:id="@+id/rb_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/rb_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high" />

    </RadioGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        android:visibility="visible"
        app:spanCount="2"
        tools:listitem="@layout/item_list" />

    <Button
        android:id="@+id/btn_searchParam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>