<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/transparent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/iv_action_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/action_back"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/dark_yellow" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/epilogue_extrabold"
                    android:text="@string/title_cart_detail"
                    android:textColor="@color/dark_yellow"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/iv_action_back"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/batik_accent_3" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:orientation="vertical"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_image_poster"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_poster"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_margin="0dp"
                            android:scaleType="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@drawable/for_tools_src" />

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="150dp"
                            android:layout_marginBottom="40dp"
                            android:background="@color/white"
                            android:gravity="start"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent">

                            <TextView
                                android:id="@+id/tv_batik"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginEnd="16dp"
                                android:fontFamily="@font/epilogue_extrabold"
                                android:text="@string/example_batik"
                                android:textColor="@color/dark_yellow" />

                            <TextView
                                android:id="@+id/tv_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="4dp"
                                android:fontFamily="@font/epilogue_semibold"
                                android:text="@string/example_location"
                                android:textColor="@color/dark_yellow" />

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:orientation="vertical"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_image">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_root"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">

                        <TextView
                            android:id="@+id/tv_packing_location"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:fontFamily="@font/epilogue_semibold"
                            android:text="@string/packing_from_location"
                            android:textColor="@color/dark_yellow"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_text_description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:fontFamily="@font/epilogue_semibold"
                            android:text="@string/description"
                            android:textColor="@color/dark_yellow"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_packing_location" />

                        <TextView
                            android:id="@+id/tv_description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:fontFamily="@font/epilogue_semibold"
                            android:maxLines="5"
                            android:text="@string/text_description"
                            android:textColor="@color/dark_yellow"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_text_description" />

                        <TextView
                            android:id="@+id/tv_text_review"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:fontFamily="@font/epilogue_semibold"
                            android:text="@string/review_product"
                            android:textColor="@color/dark_yellow"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_description" />

                        <RatingBar
                            android:id="@+id/rating_bar"
                            style="@style/Widget.AppCompat.RatingBar.Indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="16dp"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:progressTint="@color/dark_yellow"
                            android:rating="5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_text_review" />

                        <Button
                            android:id="@+id/btn_buy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/buy"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/rating_bar" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>