<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mapDetail.MapDetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:background="@color/white"
            app:contentScrim="@android:color/transparent">

                <ImageView
                    android:id="@+id/iv_action_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/action_back"
                    android:src="@drawable/ic_back"
                    android:layout_gravity="start|center_vertical"
                    app:tint="@color/dark_yellow" />

                <TextView
                    android:id="@+id/tv_title"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/epilogue_semibold"
                    android:text="@string/example_batik"
                    android:textColor="@color/dark_yellow"
                    android:layout_gravity="center_horizontal|center_vertical"
                     />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_island"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/for_tools_src" />

            <TextView
                android:id="@+id/tv_detail_island"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/dark_yellow"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_island"
                app:layout_constraintStart_toStartOf="@+id/iv_island"
                app:layout_constraintTop_toBottomOf="@+id/iv_island"
                tools:text="Batik 1 is from Jogjakarta.........................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................You can get this Batik here" />

            <TextView
                android:id="@+id/tv_batikIsland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/batik_from_this_island"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_island"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_island" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_batikIsland"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16sp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_batikIsland"
                app:spanCount="1"
                tools:listitem="@layout/item_list_map" />

            <TextView
                android:id="@+id/tv_batikNonIsland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/batik_dari_pulau_lain"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_island"
                app:layout_constraintTop_toBottomOf="@+id/rv_batikIsland" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_batikNonIsland"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_batikNonIsland"
                app:spanCount="1"
                tools:listitem="@layout/item_list_map" />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.core.widget.NestedScrollView>




</androidx.coordinatorlayout.widget.CoordinatorLayout>